# dev_rosa

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: Extra_Del.hpp  global_skel.hpp  rosa_main.hpp
launch/: rosa_launch.xml
src/: Extra_Del.cpp  global_skel.cpp  rosa_exec.cpp  rosa_main.cpp
