<?xml version="1.0"?>
<package format="3">
  <name>dev_rosa</name>
  <version>0.0.0</version>

  <description>
  TODO: Package description
  </description>

  <maintainer email="bjarke_holm@hotmail.com">airlab</maintainer>

  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <!-- <depend>std_msgs</depend> -->
  <!-- <depend>sensor_msgs</depend> -->
  <!-- <depend>geometry_msgs</depend> -->
  <!-- <depend>pcl_ros</depend> -->
  <!-- <depend>pcl_conversion</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
